--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     # 发布 Release
     - name: Create Release
       id: create_release
-      uses: actions/create-release@master
+      uses: actions/create-release@main
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
